contact page,gallery,home image changes

--- a/gallery.html
+++ b/gallery.html
@@ -3,8 +3,132 @@
 <html manifest="bvppkv.appcache">
 <head>
 	<meta charset="UTF-8">
-	<title>Baghavathipalayam,Peralaikattuvalasu Kavadi</title>
+	<meta name="description" content="Baghavathipalayam,Peralaikattuvalasu srimurugan kavadi group photo gallery">
+	<title>Baghavathipalayam,Peralaikattuvalasu Kavadi - Gallery</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
+    </script>
+        <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-47204836-1', 'srimurugan.org');
+        ga('send', 'pageview');
+</script>
+<script type="text/javascript">
+
+$(document).ready(function() {		
+	
+	//Execute the slideShow
+	slideShow();
+
+});
+
+function slideShow() {
+
+	//Set the opacity of all images to 0
+	$('#gallery a').css({opacity: 0.0});
+	
+	//Get the first image and display it (set it to full opacity)
+	$('#gallery a:first').css({opacity: 1.0});
+	
+	//Set the caption background to semi-transparent
+	$('#gallery .caption').css({opacity: 0.7});
+
+	//Resize the width of the caption according to the image width
+	$('#gallery .caption').css({width: $('#gallery a').find('img').css('width')});
+	
+	//Get the caption of the first image from REL attribute and display it
+	$('#gallery .content').html($('#gallery a:first').find('img').attr('rel'))
+	.animate({opacity: 0.7}, 400);
+	
+	//Call the gallery function to run the slideshow, 6000 = change to next image after 6 seconds
+	setInterval('gallery()',6000);
+	
+}
+
+function gallery() {
+	
+	//if no IMGs have the show class, grab the first image
+	var current = ($('#gallery a.show')?  $('#gallery a.show') : $('#gallery a:first'));
+
+	//Get next image, if it reached the end of the slideshow, rotate it back to the first image
+	var next = ((current.next().length) ? ((current.next().hasClass('caption'))? $('#gallery a:first') :current.next()) : $('#gallery a:first'));	
+	
+	//Get next image caption
+	var caption = next.find('img').attr('rel');	
+	
+	//Set the fade in effect for the next image, show class has higher z-index
+	next.css({opacity: 0.0})
+	.addClass('show')
+	.animate({opacity: 1.0}, 1000);
+
+	//Hide the current image
+	current.animate({opacity: 0.0}, 1000)
+	.removeClass('show');
+	
+	//Set the opacity to 0 and height to 1px
+	$('#gallery .caption').animate({opacity: 0.0}, { queue:false, duration:0 }).animate({height: '1px'}, { queue:true, duration:300 });	
+	
+	//Animate the caption, opacity to 0.7 and heigth to 100px, a slide up effect
+	$('#gallery .caption').animate({opacity: 0.7},100 ).animate({height: '67px'},500 );
+	
+	//Display the content
+	$('#gallery .content').html(caption);
+	
+	
+}
+
+</script>
+<style type="text/css">
+body{
+	font-family:arial
+}
+
+.clear {
+	clear:both
+}
+
+#gallery {
+	position:relative;
+	height:360px
+}
+	#gallery a {
+		float:left;
+		position:absolute;
+	}
+	
+	#gallery a img {
+		border:none;
+	}
+	
+	#gallery a.show {
+		z-index:500
+	}
+
+	#gallery .caption {
+		z-index:600; 
+		background-color:#000; 
+		color:#ffffff; 
+		height:100px; 
+		width:100%; 
+		position:absolute;
+		bottom:-120px;
+	}
+
+	#gallery .caption .content {
+		margin:5px
+	}
+	
+	#gallery .caption .content h3 {
+		margin:0;
+		padding:0;
+		color:#1DCCEF;
+	}
+	
+
+</style>
 </head>
 <body>
 	<div id="header">
@@ -35,14 +159,34 @@
 		<div id="blog">
 			<h1>Gallery</h1>
 			<div id="main">
-				<marquee direction="left" behavior="slide">
-				   <img src="images/kodumudi.jpg" alt="LOGO" height="450px">
-				   <img src="images/pkv.jpg" alt="LOGO" height="450px">
-				   <img src="images/pkv2.jpg" alt="LOGO" height="450px">
-				   <img src="images/pkv1.jpg" alt="LOGO" height="450px">
-				   <img src="images/pkv3.jpg" alt="LOGO" height="450px">
-				   <img src="images/aboutus.jpg" alt="LOGO" height="450px">
-				</marquee>
+			  <div id="gallery">
+
+	<a href="#" class="show">
+		<img src="images/kodumudi.jpg" alt="kodumudi" width="680" height="480" title="" alt="" rel="<h3>Cauvery River,Kodumudi</h3>"/>
+	</a>
+	
+	<a href="#">
+		<img src="images/pkv.jpg" alt="divine_water" width="680" height="480" title="" alt="" rel="<h3>Divine Water</h3>"/>
+	</a>
+	
+	<a href="#">
+		<img src="images/pkv2.jpg" alt="kavadi_attam" width="680" height="480" title="" alt="" rel="<h3>Kavadi Attam</h3>"/>
+	</a>
+
+	<a href="#">
+		<img src="images/pkv1.jpg" alt="trust_place" width="680" height="480" title="" alt="" rel="<h3>Sivanamalai Trust Place</h3>"/>
+	</a>
+	
+	<a href="#">
+		<img src="images/pkv3.jpg" alt="" width="680" height="480" title="" alt="" rel="<h3>Events</h3>"/>
+	</a>
+	
+	<a href="#">
+		<img src="images/aboutus.jpg" alt="" width="680" height="480" title="" alt="" rel="<h3>Sri Sivanmalai Murugan Arul Trust</h3>"/>
+	</a>
+
+	<div class="caption"><div class="content"></div></div>
+</div>
 			</div>
 		</div>
 	</div>
