--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+    <meta name="description" content="Srimurugan sivanmalai kavadi Baghavathipalayam,Peralaikattuvalasu group">
+    <meta name="google-site-verification" content="BikwqPTCnaUlpUnQ4DmHBupuPvJXVD5OtCEYWIycQ_4" />
 	<title>Baghavathipalayam,Peralaikattuvalasu Kavadi</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
+        <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-47204836-1', 'srimurugan.org');
+        ga('send', 'pageview');
+</script>
 </head>
 <body>
 	<div id="header">
@@ -34,7 +44,7 @@
 	<div id="contents">
 		<div id="adbox">
 			<div>
-				<img src="images/sri.png" alt="Img">
+				<img src="images/home-murugan.jpg" alt="Img" class="home-image">
 				<div class="details">
 				   <img src="images/home-song.jpg" alt="Img">	
 				</div>
@@ -57,3 +67,6 @@
 	</div>
 </body>
 </html>
+<style type="text/css">
+.home-image{width:458px;margin-left: -49px !important;margin-top: 87px !important;}
+</style>
