--- a/aboutus.html
+++ b/aboutus.html
@@ -3,8 +3,17 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Baghavathipalayam,Peralaikattuvalasu Kavadi</title>
+	<meta name="description" content="Baghavathipalayam,Peralaikattuvalasu srimurugan kavadi group">
+	<title>Baghavathipalayam,Peralaikattuvalasu Kavadi - AboutUs</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
+        <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-47204836-1', 'srimurugan.org');
+        ga('send', 'pageview');
+</script>
 </head>
 <body>
 	<div id="header">
