--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,46 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Baghavathipalayam,Peralaikattuvalasu Kavadi</title>
+	<meta name="description" content="Baghavathipalayam,Peralaikattuvalasu srimurugan kavadi group contact details">
+	<title>Baghavathipalayam,Peralaikattuvalasu Kavadi - Contact</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
+        <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-47204836-1', 'srimurugan.org');
+        ga('send', 'pageview');
+        </script>
+        <style>
+      #map_canvas {
+        float: right;
+        width: 500px;
+        height: 400px;
+      }
+    </style>
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <script>
+      function initialize() {
+        var myLatlng = new google.maps.LatLng(11.03909,77.540643);
+        var mapOptions = {
+          zoom: 15,
+          center: myLatlng,
+          mapTypeId: google.maps.MapTypeId.HYBRID
+        }
+        var map = new google.maps.Map(document.getElementById('map_canvas'), mapOptions);
+        var marker = new google.maps.Marker({
+          position: myLatlng,
+          map: map,
+          title: 'Sri Sivanmalai Murugan Arul Trust Land'
+        });
+      }
+
+google.maps.event.addDomListener(window, 'load', initialize);
+
+
+    </script>
+
 </head>
 <body>
 	<div id="header">
@@ -34,7 +72,11 @@
 	<div id="contents">
 		<div id="contact">
 			<h1>Contact</h1>
-			<img src="images/telephone.png" alt="Img">
+                        <div id="map_canvas">
+                        </div>
+                                <h3>Sri Sivanmalai Murugan Arul Trust</h3>
+                                <p>Want to donate money or things to support free feed which is organised by us, at our trust place in sivanmalai on every year Thai poosam, please do contact us in below mobile numbers or email.</p>
+			<!--img src="images/telephone.png" alt="Img"-->
 				<table>
 					<tbody>
 						<tr>
