--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="description" content="Baghavathipalayam,Peralaikattuvalasu srimurugan kavadi group photo gallery">
-	<title>Baghavathipalayam,Peralaikattuvalasu Kavadi - Gallery</title>
+	<title>Sri Sivanmalai Murugan Arul Trust - Image Gallery</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
     </script>
