--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="description" content="Baghavathipalayam,Peralaikattuvalasu srimurugan kavadi group contact details">
-	<title>Baghavathipalayam,Peralaikattuvalasu Kavadi - Contact</title>
+	<title>Contact Baghavathipalayam Peralaikattuvalasu Kavadi Group</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
         <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
