--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
     <meta name="description" content="Srimurugan sivanmalai kavadi Baghavathipalayam,Peralaikattuvalasu group">
     <meta name="google-site-verification" content="BikwqPTCnaUlpUnQ4DmHBupuPvJXVD5OtCEYWIycQ_4" />
-	<title>Baghavathipalayam,Peralaikattuvalasu Kavadi</title>
+	<title>Sri Sivanamalai Murugan</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
         <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
