--- a/sivanmalai.html
+++ b/sivanmalai.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="description" content="Srimurugan sivanmalai murugan history and details">
 	<meta name="keywords" content="sivanmalai murugan, srimurugan, sivanmalai kavadi, sivanmalai pooja">
-	<title>Baghavathipalayam,Peralaikattuvalasu Sivanmalai murugan thertha Kavadi </title>
+	<title>Details of Subramanyaswamy Temple sivanmalai,kangayam </title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
         <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
