--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="description" content="Baghavathipalayam,Peralaikattuvalasu srimurugan kavadi group">
-	<title>About - Sri Sivanmalai Murugan Arul Trust</title>
+	<title>About - Sri Murugan Arul Trust</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
         <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
