--- a/aboutus.html
+++ b/aboutus.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!-- Website template by freewebsitetemplates.com -->
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="Baghavathipalayam,Peralaikattuvalasu srimurugan kavadi group">
-	<title>About - Sri Murugan Arul Trust</title>
+	<meta name="description" content="Baghavathipalayam,Peralaikattuvalasu Sri Sivanmalai murugan Arul Trust kavadi group">
+	<meta name="keywords" content="Sri Murugan Arul Trust,Sivanmalai kavadi, sivanmalai car festival">
+	<title>About - Sri Sivanmalai Murugan Arul Trust</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
         <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
