--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="description" content="Baghavathipalayam,Peralaikattuvalasu srimurugan kavadi group contact details">
+	<meta name="keywords" content="sivanmalai thai poosam,free feed donation">
 	<title>Contact Baghavathipalayam Peralaikattuvalasu Kavadi Group</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
         <script>
