--- a/sivanmalai.html
+++ b/sivanmalai.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="description" content="Srimurugan sivanmalai murugan history and details">
-	<meta name="keywords" content="sivanmalai murugan, srimurugan, sivanmalai kavadi, sivanmalai pooja">
+	<meta name="keywords" content="sivanmalai murugan, srimurugan, sivanmalai kavadi, sivanmalai pooja, sivanmalai orderbox,Sivavakkiyar, holy theerthas">
 	<title>Details of Subramanyaswamy Temple sivanmalai,kangayam </title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
         <script>
