robots.txt and meta description changes

--- a/aboutus.html
+++ b/aboutus.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="Baghavathipalayam,Peralaikattuvalasu Sri Sivanmalai murugan Arul Trust kavadi group">
+	<meta name="description" content="Sri Sivanmalai Murugan Arul Trust, Baghavathipalayam Peralaikattuvalasu group">
 	<meta name="keywords" content="Sri Murugan Arul Trust,Sivanmalai kavadi, sivanmalai car festival">
 	<title>About - Sri Sivanmalai Murugan Arul Trust</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
