--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="Baghavathipalayam,Peralaikattuvalasu srimurugan kavadi group contact details">
+	<meta name="description" content="Contact details to support the free feed on every thai poosam in sivanmalai">
 	<meta name="keywords" content="sivanmalai thai poosam,free feed donation">
 	<title>Contact Baghavathipalayam Peralaikattuvalasu Kavadi Group</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
