--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <html manifest="bvppkv.appcache">
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="Baghavathipalayam,Peralaikattuvalasu srimurugan kavadi group photo gallery">
+	<meta name="description" content="Events and Programme of Sri sivanmalai murugan arul kavadi group">
 	<title>Sivanmalai Murugan Devotees - Image Gallery</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
