--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-    <meta name="description" content="Srimurugan sivanmalai kavadi Baghavathipalayam,Peralaikattuvalasu group">
+    <meta name="description" content="Images and Poems of the lord murugan from the sri arul murugan trust sivanmalai">
     <meta name="google-site-verification" content="BikwqPTCnaUlpUnQ4DmHBupuPvJXVD5OtCEYWIycQ_4" />
 	<title>Sri Sivanamalai Murugan</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
