--- a/sivanmalai.html
+++ b/sivanmalai.html
@@ -3,8 +3,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="Srimurugan sivanmalai murugan history and details">
-	<meta name="keywords" content="sivanmalai murugan, srimurugan, sivanmalai kavadi, sivanmalai pooja, sivanmalai orderbox,Sivavakkiyar, holy theerthas">
+	<meta name="description" content="Sivanmalai murugan history and interesting facts about the temple">
+	<meta name="keywords" content="sivanmalai murugan, srimurugan, sivanmalai kavadi, sivanmalai pooja, sivanmalai orderbox,Sivavakkiyar, holy theerthas,sivanmalai temple">
 	<title>Details of Subramanyaswamy Temple sivanmalai,kangayam </title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
         <script>
@@ -27,7 +27,7 @@
 					<a href="index.html">Home</a>
 				</li>
 				<li class="selected">
-					<a href="about.html">Sivanmalai</a>
+					<a href="sivanmalai.html">Sivanmalai</a>
 				</li>
 				<li>
 					<a href="aboutus.html">About Us</a>
